--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <script src="p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-        </head><body><h2> click to start <br> press space to pause and unpause <br> press r to restart </h2>
-    <script src="sketch.js"> </script>
-</body></html>
+</head> 
+    <body> <script src="sober.js"></script>
+        <h2> click to start <br> <br> <br> press space to pause <br> <br> <br> press r to restart <br> <br> <a href="cocaine.html">cocaine</a> </h2>
+</body>
+</html>
