--- a/cocaine.html
+++ b/cocaine.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
 </head> 
     <body> <script src="cocaine.js"></script>
-        <h2> click to start <br> <br> <br> press space to pause <br> <br> <br> press r to restart <br> <br> <a href="index.html">sober</a> </h2>
+        <h2> click to start <br> <br> press space to pause <br> <br> press r to restart <br> <br> <a href="sober.html">sober</a> <br> <a href="acid.html">acid</a> </h2>
 </body>
 </html>
