--- a/uni.html
+++ b/uni.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head> 
-    <body> <script src="acid.js"></script>
+    <body> <script src="uni.js"></script>
         <div class="container-small">
         <h3> <span style="color:blue">arrow keys to start</span> 
         <br> <span style="color:orange">press space to pause</span> 
@@ -15,27 +15,27 @@
 </h3>
 <h4>
 <br>
-Random Colors: <input type="checkbox" id="cb1" onclick="cb1()" disabled>
+Random Colors: <input type="checkbox" id="cb1" onclick="cb1()">
 <br>
-Wall Collision: <input type="checkbox" id="cb2" onclick="cb2()" disabled>
+Wall Collision: <input type="checkbox" id="cb2" onclick="cb2()" checked="checked">
 <br>
-Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" disabled>
+Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" checked="checked">
 
 </h4>
 <label for="slider1" class="form-label">Speed:</label>
-<input type="range" class="form-range" min="1" max="60" step="0.1" value="18.5" id="slider1" onchange="updateSpeed(this.value);" disabled>
+<input type="range" class="form-range" min="1" max="60" step="0.1" value="18.5" id="slider1" onchange="updateSpeed(this.value);">
 
 <br>
 <label for="slider2" class="form-label">Tile Size:</label>
-<input type="range" class="form-range" min="1" max="30" step="0.1" value="13.5" id="slider1" onchange="updateCellSize(this.value);" disabled>
+<input type="range" class="form-range" min="1" max="30" step="0.1" value="13.5" id="slider1" onchange="updateCellSize(this.value);">
 
 <br>
-<label for="slider3" class="form-label"># of Rows/Cols:</label>
-<input type="range" class="form-range" min="10" max="100" step="1" value="48" id="slider3" onchange="updateRowsCols(this.value);" disabled>
+<label for="slider3" class="form-label"># of Rows (height):</label>
+<input type="range" class="form-range" min="10" max="100" step="1" value="48" id="slider3" onchange="updateRows(this.value);">
 <br>
 
 <label for="slider4" class="form-label"># of Columns (width):</label>
-<input type="range" class="form-range" min="10" max="100" step="1" value="58" id="slider4" onchange="updateCols(this.value);" disabled>
+<input type="range" class="form-range" min="10" max="100" step="1" value="58" id="slider4" onchange="updateCols(this.value);">
 <br>
 
 Before raising tile size, lower rows/cols **
