--- a/cocaine.html
+++ b/cocaine.html
@@ -45,7 +45,7 @@ Before raising tile size, lower rows/cols **
     <a href="sober.html">sober</a>
     <a href="cocaine.html">cocaine</a>
     <a href="acid.html">acid</a>
-    <a href="uni.html">custom</a>
+    <a href="index.html">custom</a>
   </div>
 </div>
 
