--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" checked="checke
 <input type="range" class="form-range" min="10" max="100" step="1" value="58" id="slider4" onchange="updateCols(this.value);">
 <br>
 
+<label for="slider5" class="form-label">growth per apple</label>
+<input type="range" class="form-range" min="1" max="50" step="1" value="8" id="slider5" onchange="updateGrowth(this.value);">
+<br>            
+
 Before raising tile size, lower rows/cols **
 <h2>
 <div class="dropdown">
