--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-</head> 
+</head>
     <body> <script src="uni.js"></script>
-        <div class="container-small">
-        <h3> <span style="color:blue">arrow keys to start</span> 
-        <br> <span style="color:orange">press space to pause</span> 
-        <br> <span style="color:red">press r to restart</span> <br>
+        <div class="container-sm-">
+        <h3> <span style="color:blue">arrow keys to start</span> <br> <br>
+        <br> <span style="color:orange">press space to pause</span> <br> <br>
+        <br> <span style="color:red">press r to restart</span> <br> <br>
 
 </h3>
 <h4>
@@ -20,8 +20,10 @@ Random Colors: <input type="checkbox" id="cb1" onclick="cb1()">
 Wall Collision: <input type="checkbox" id="cb2" onclick="cb2()" checked="checked">
 <br>
 Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" checked="checked">
-
 </h4>
+</div>
+
+<div class="container-sm-">
 <label for="slider1" class="form-label">Speed:</label>
 <input type="range" class="form-range" min="1" max="60" step="0.1" value="18.5" id="slider1" onchange="updateSpeed(this.value);">
 
@@ -39,9 +41,9 @@ Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" checked="checke
 <br>
 
 <label for="slider5" class="form-label">growth per apple</label>
-<input type="range" class="form-range" min="1" max="50" step="1" value="8" id="slider5" onchange="updateGrowth(this.value);">
+<input type="number" class="form-range" value="8" id="slider5" onchange="updateGrowth(this.value);">
 <br>
-
+<br>
 Before raising tile size, lower rows/cols **
 <h2>
 <div class="dropdown">
@@ -54,8 +56,7 @@ Before raising tile size, lower rows/cols **
   </div>
 </div>
 
-</h2>        
-
+</h2>    
 </div>
 </body>
 </html>
