--- a/acid.html
+++ b/acid.html
@@ -7,9 +7,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head> 
     <body> <script src="acid.js"></script>
-        <div class="container-small">
-        <h3> <span style="color:blue">arrow keys to start</span> 
-        <br> <span style="color:orange">press space to pause</span> 
+        <div class="container-sm-">
+        <h3> <span style="color:blue">arrow keys to start</span> <br><br>
+        <br> <span style="color:orange">press space to pause</span><br><br> 
         <br> <span style="color:red">press r to restart</span> <br>
 
 </h3>
@@ -22,6 +22,8 @@ Wall Collision: <input type="checkbox" id="cb2" onclick="cb2()" disabled>
 Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" disabled>
 
 </h4>
+        </div>
+        <div class="container-sm-">
 <label for="slider1" class="form-label">Speed:</label>
 <input type="range" class="form-range" min="1" max="60" step="0.1" value="18.5" id="slider1" onchange="updateSpeed(this.value);" disabled>
 
