--- a/cocaine.html
+++ b/cocaine.html
@@ -41,7 +41,7 @@ Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" checked="checke
 <br> 
         
 <label for="slider5" class="form-label">growth per apple</label>
-<input type="range" class="form-range" min="1" max="50" step="1" value="8" id="slider5" onchange="updateGrowth(this.value);" disabled>
+<input type="number" class="form-range" value="8" id="slider5" onchange="updateGrowth(this.value);" disabled>
 <br>
 
 Before raising tile size, lower rows/cols **
