--- a/acid.html
+++ b/acid.html
@@ -32,7 +32,7 @@ Snake Collision: <input type="checkbox" id="cb3" onclick="cb3()" disabled>
 <input type="range" class="form-range" min="1" max="30" step="0.1" value="13.5" id="slider1" onchange="updateCellSize(this.value);" disabled>
 
 <br>
-<label for="slider3" class="form-label"># of Rows/Cols:</label>
+<label for="slider3" class="form-label"># of Rows (height):</label>
 <input type="range" class="form-range" min="10" max="100" step="1" value="48" id="slider3" onchange="updateRowsCols(this.value);" disabled>
 <br>
 
